add nikkah service
